<resources>
    <!-- listado ubicaciones -->
    <string name="toolbar_title_location">Ubicaciones</string>
    <string name="btnAddLocation">Agregar nueva ubicación </string>


    <!-- listado sensores del invernadero -->
    <string name="toolbar_title_sensors">Sensores</string>
    <string name="btnAddSensor">Agregar un nuevo sensor</string>
    <string name="input_search_sensor">Buscar un sensor </string>
    <string name="greenhouse_name">nombre invernadero</string>
    <string name="textViewInputName">arandanos peruanos</string>
    <string name="textViewDescriptionTitle">Descripción</string>
    <string name="textViewDescription">zona de arandanos con arandanos porque osino no seria una zona de arandanos</string>

    <!-- agregar ubicacion -->
    <string name="toolbar_title_add_location">Agregar Ubicacion</string>
    <string name="input_name_location">Ingrese el nombre de la ubicacion</string>
    <string name="input_description_location">Ingrese la descripcion de la ubicacion</string>
    <string name="btn_add_location">Agregar ubicacion</string>


    <!-- agregar sensor -->
    <string name="toolbar_title_add_sensor">Agregar Sensor</string>
    <string name="input_name_sensor">Ingrese el nombre del Sensor</string>
    <string name="input_description_sensor">Ingrese la descripcion del Sensor</string>
    <string name="btn_add_sensor">Agregar Sensor</string>


    <!-- modificar sensor -->
    <string name="toolbar_title_modify_sensor">Modificar Sensor</string>
    <string name="input_modify_name_sensor">Ingrese el nuevo nombre del Sensor</string>
    <string name="input_modify_description_sensor">Ingrese la nueva descripcion del Sensor</string>
    <string name="btn_modify_sensor">Modificar Sensor</string>


    <!-- detalles de sensores -->
    <string name="toolbar_title_sensor_details">Detalles del sensor</string>
    <string name="btn_Modify_sensor">Modificar sensor</string>
    <string name="btn_Remove_Sensor">Eliminar sensor</string>
    <string name="text_Sensor_information">Información del Sensor</string>
    <string name="text_Ideal_Temperature">Temperatura Ideal</string>
    <string name="text_Ideal_Humidity">Humedad Ideal"></string>
    <string name="text_details_name_sensor">Nombre: Sensor de Temperatura</string>
    <string name="text_details_description_sensor">Descripción: Sensor que mide la temperatura ambiente en el invernadero.</string>

    <string name="text_details_location">Ubicación: Zona de Arandanos</string>

    <string name="text_details_sensor">Temperatura Ideal: 22°C</string>
    <string name="text_Sensor_Name">Nombre</string>
    <string name="text_Sensor_Description">Descripción</string>


    <string name="table_header_date_and_time">Fecha y hora</string>
    <string name="table_header_reading">Lectura</string>

    <!--  ejemplos-->
    <string name="fecha1">2024-09-10 10:00</string>
    <string name="medida1">24°C</string>
    <string name="fecha2">2024-09-10 09:00</string>
    <string name="medida2">23°C</string>
    <string name="fecha3">2024-09-09 18:00</string>
    <string name="medida3">20°C</string>

    <string name="app_name">PruebaIot</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string-array name="sensor_types">
        <item>Humedad</item>
        <item>Temperatura</item>
    </string-array>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>