<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/verdeoscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/toolbar_title_add_location"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/editTextName"
        android:layout_width="383dp"
        android:layout_height="62dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="14dp"
        android:ems="10"
        android:hint="@string/input_name_location"
        android:inputType="text"
        android:text=""
        android:textAlignment="center"
        android:textColorHint="#333131"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="383dp"
        android:layout_height="62dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/input_description_location"
        android:inputType="text"
        android:text=""
        android:textAlignment="center"
        android:textColorHint="#333131"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuardarUbicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <Button
        android:id="@+id/buttonGuardarUbicacion"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="542dp"
        android:backgroundTint="@color/verdeoscuro"
        android:text="@string/btn_add_location"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>