<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifySensor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/verdeoscuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/toolbar_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/toolbar_title_modify_sensor"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <Spinner
        android:id="@+id/mySpinner"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSensorName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextSensorName"
        android:layout_width="383dp"
        android:layout_height="62dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/input_modify_name_sensor"
        android:inputType="text"
        android:text=""
        android:textAlignment="center"
        android:textColorHint="#333131"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextSensorDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mySpinner" />

    <EditText
        android:id="@+id/editTextSensorDescripcion"
        android:layout_width="383dp"
        android:layout_height="62dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/input_modify_description_sensor"
        android:inputType="text"
        android:text=""
        android:textAlignment="center"
        android:textColorHint="#333131"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonModify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSensorName" />

    <Button
        android:id="@+id/buttonModify"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="456dp"
        android:backgroundTint="@color/verdeoscuro"
        android:text="@string/btn_modify_sensor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSensorDescripcion" />

</androidx.constraintlayout.widget.ConstraintLayout>
